added fb and linkedin backend

--- a/ProfileManager/templates/home.html
+++ b/ProfileManager/templates/home.html
@@ -1,5 +1,9 @@
 <html>
 <body>
 <h1>Hello World!</h1>
+
+<a href="{% url socialauth_begin 'facebook' %}">Login with Facebook</a>
+<a href="{% url socialauth_begin 'linkedin' %}">Login with LinkedIn</a>
+
 </body>
 </html>
