--- a/ProfileManager/templates/home.html
+++ b/ProfileManager/templates/home.html
@@ -1,9 +1,7 @@
-<html>
-<body>
-<h1>Hello World!</h1>
+{% extends 'base.html' %}
 
-<a href="{% url socialauth_begin 'facebook' %}">Login with Facebook</a>
-<a href="{% url socialauth_begin 'linkedin' %}">Login with LinkedIn</a>
+{% block title %}Home{% endblock %}
 
-</body>
-</html>
+{% block content %}
+<h1>Home</h1>
+{% endblock %}
