--- a/ProfileManager/templates/login.html
+++ b/ProfileManager/templates/login.html
@@ -7,6 +7,9 @@
     <div data-role="content">
         <a href="{% url socialauth_begin 'linkedin' %}" data-role="button" data-icon="facebook" rel="external">Login with LinkedIn</a>
         <a href="{% url home %}" data-role="button" data-icon="facebook" rel="external">Login with Edulele</a>
+        <br/>
+        <a href="#">Forgot your password?</a><br/><br/>
+        <a href="#">Create an Edulele account</a>
     </div>
 </div>
 {% endblock %}
