--- a/ProfileManager/templates/home.html
+++ b/ProfileManager/templates/home.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div data-role="page">
     <div data-role="content">
-        <a href="{% url socialauth_begin 'linkedin' %}" data-role="button" data-icon="facebook" rel="external">Login with LinkedIn</a>
-        <a href="{% url login %}" data-role="button" data-icon="facebook" rel="external">Login with Edulele</a>
+        <a href="{% url socialauth_begin 'linkedin' %}" data-role="button" data-icon="facebook" rel="external" data-theme="b">Login with LinkedIn</a>
+        <a href="{% url login %}" data-role="button" data-icon="facebook" rel="external" data-theme="e">Login with Edulele</a>
         <br/>
         <a href="#">Forgot your password?</a><br/><br/>
-        <a href="#">Create an Edulele account</a>
+        <a href="{% url signup %}">Create an Edulele account</a>
     </div>
 </div>
 {% endblock %}
