--- a/ProfileManager/templates/login.html
+++ b/ProfileManager/templates/login.html
@@ -4,8 +4,19 @@
 
 {% block content %}
 <div data-role="page">
-    <div data-role="content">
+    <div data-role="header" data-position="fixed">
+        <a href="#" class="ui-btn-left" data-rel="back" data-ajax="false">Back</a>
         <h1>Login</h1>
+    </div>
+    <div data-role="content">
+        <label for="email">Email:</label>
+        <input type="text" name="email" id="email" value="">
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password" value="">
+        <a href="#" data-role="button" rel="external" data-theme="e">Click here to login</a>
+        <br/>
+        <a href="#">Forgot your password?</a><br/><br/>
+        <a href="{% url signup %}">Create an Edulele account</a>
     </div>
 </div>
 {% endblock %}
